--- a/Program/AFP2DemoProject/AFP2Demo/dao_relational/pom.xml
+++ b/Program/AFP2DemoProject/AFP2Demo/dao_relational/pom.xml
@@ -43,5 +43,11 @@
         <version>4.12</version>
         <scope>test</scope>
     </dependency>
-</dependencies>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.8.0-M1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
